# DvpDetect

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
cmake/: DeployQt.cmake  FindDVP2.cmake  find_Qt_Dependency.cmake
include/: CameraCapture.hpp  DvpCameraBuilder.hpp  DvpCameraCapture.hpp  DvpCameraManager.hpp  DvpCapture.hpp  DvpConfig.hpp  DvpEventManager.hpp  FrameProcessor.hpp  ImageSignalBus.hpp  MultiCameraCoordinator.hpp
include/algo/: AlgoBase.hpp  AlgorithmConfigTraits.hpp  EdgeDetection.hpp  GenericAlgorithmConfigObserver.hpp  HoleDetection.hpp
include/cameras/: CameraFactory.hpp  CameraManager.hpp
include/config/: AlogoParams.hpp  CameraConfig.hpp  ConfigManager.hpp  ConfigObserver.hpp
include/protocol/: AsioTcpTransport.hpp  LegacyCodec.hpp  ProtocolSession.hpp  TransportAdapter.hpp  codec.hpp  messages.hpp
include/utils/: executable_path.h  inicpp.hpp  utils.h
script/: format.py
src/: CMakeLists.txt  DvpCameraBuilder.cpp  DvpCameraCapture.cpp  DvpCapture.cpp  DvpEventManager.cpp  ImageSignalBus.cpp  example.cpp  main.cpp
src/algo/: HoleDetection.cpp
src/cameras/: CameraFactory.cpp  CameraManager.cpp
src/client/: CMakeLists.txt  DvpCameraDelegate.cpp  DvpCameraDelegate.h  DvpCameraManager.cpp  DvpCameraManager.h  DvpCameraModel.cpp  DvpCameraModel.h  DvpCameraView.cpp  DvpCameraView.h  DvpConfigDelegate.cpp  DvpConfigDelegate.h  DvpConfigModel.cpp  DvpConfigModel.h  DvpMainWindow.cpp  DvpMainWindow.h  DvpMultiCameraManager.cpp  DvpMultiCameraManager.h  client.qrc  main.cpp
src/protocol/: AsioTcpTransport.cpp  LegacyCodec.cpp  ProtocolSession.cpp
src/utils/: executable_path.cpp
tests/: CMakeLists.txt
tests/camera_builder/: AdvancedConfigTests.cpp  BasicConfigTests.cpp  IntegrationTests.cpp
tests/mock/: DVPCameraMock.hpp  IDVPCamera.h  TestDvpCamera.h  TestDvpCameraBuilder.h
